--- a/be/package.json
+++ b/be/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
+    "google-auth-library": "^9.15.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.4",
+    "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
+    "react-google-login": "^5.2.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
