--- a/fe/package.json
+++ b/fe/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@chakra-ui/react": "^2.10.4",
+    "@chakra-ui/theme-tools": "^2.2.7",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@react-oauth/google": "^0.12.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.5.4",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
